# androidcpp

./: README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/suyf/androidcpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/src/: native-lib.cpp
app/src/main/cpp/src/bridge/: cjson_bridge.c  cjson_bridge.h  md5_bridge.c  md5_bridge.h
app/src/main/cpp/src/file/: file_tool.cpp  file_tool.h
app/src/main/cpp/src/json/: cjson_test.c  cjson_test.h  json_tool.c  json_tool.h
app/src/main/cpp/src/log/: android_log.h
app/src/main/cpp/src/network/: socket_tool.c  socket_tool.h
app/src/main/cpp/src/sign/: sign_handler.c  sign_handler.h
app/src/main/cpp/src/utils/: md5_tool.c  md5_tool.h  openssl_sm2.cpp  openssl_sm2.hpp  openssl_tool.c  openssl_tool.h  string_util.cpp  string_util.hpp
app/src/main/cpp/submodule/cJSON/: CMakeLists.txt
app/src/main/java/com/suyf/androidcpp/: MainActivity.kt
app/src/main/java/com/suyf/androidcpp/jni/: JavaMethodBridge.java  NativeCjsonBridge.java  NativeMD5Bridge.java  NativeMethodBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/suyf/androidcpp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
